# schwertspitze

./: .gitignore  CMakeLists.txt  bootstrap.sh
.github/: CONTRIBUTING.md  README.md
data/: config.cfg
data/shaders/: shader.frag  shader.vert
src/: client.cpp  main.cpp  server.cpp
src/include/: CMakeLists.txt  client.cpp  client.h  input.cpp  input.h  object.h  objects.h  objects.hpp  server.cpp  server.h
src/lib/: CMakeLists.txt  input.cpp  input.h  menu.h  object.cpp  object.h  server.cpp
